# newfang-nerve

./: newfang.sh  pyproject.toml
.newfang/: config.yaml
.newfang/playbooks/: reconcile-playbook.md
docs/: ROADMAP.md
newfang/agents/: conductor.py  simulator.py
newfang/api/: app.py
newfang/cli/: main.py
newfang/core/: reconciler.py  registry.py  scanner.py  spine.py
newfang/lifecycle/: constraint_engine.py  engine.py  gate_evaluator.py  scoring_engine.py
newfang/models/: project.py  uow.py
newfang/observability/: override_ledger.py
newfang/utils/: config.py  llm.py
